--- a/2.4 Movie Ranking Project/lab_2/index.html
+++ b/2.4 Movie Ranking Project/lab_2/index.html
@@ -11,7 +11,19 @@
 
 </head>
 <body>
-    el
+    <div>
+        <header>
+            <h1>Movie Ranking</h1>
+        </header>
+        <main>  </main>
+        
+
+
+
+
+
+
+    </div>
 
 
 
