--- a/4.3 HTML Porfolio Project/index.html
+++ b/4.3 HTML Porfolio Project/index.html
@@ -8,15 +8,12 @@
 </head>
 <body>
  <h1>Obada' Portofolio</h1>   
- <h2>Im a web developer</h2>
+ <h2>Im a Software Development student at HKR.
+ </h2>
  <hr >
-<h3><a href="./public/movie-ranking.html"> movie-ranking project</a></h3>
+<h3><a href="./public/movie-ranking.html"> Breath </a></h3>
 <img src="./assets/images/movie-ranking.png" height="200" alt="movie-ranking project">
 
-
-<h3><a href="./public/birthday-invite.html">bithday project</a></h3>
-<img src="./assets/images/birthday-invite.png" height="200" alt="bithday project" >
-<hr>
 <h4><a href="./public/about.html">About me</a></h4>
 <h4><a href="./public/contact.html">Contact Me</a></h4>
 </body>
