--- a/lab_2/main.html
+++ b/lab_2/main.html
@@ -11,11 +11,13 @@
 
 <body>
     <nav>
-        <ul>
-            <li> <a href="main.html">Home</a></li>
-            <li> <a href="./about.html">About</a></li>
-            <li> <a href="./posts.html">Posts</a></li>
-            <li> <a href="./contactForm.html">Contact</a></li>
+        <ul class="w3-bar w3-black">
+            <li> <a href="main.html" class="w3-bar-item w3-button w3-mobile">Home</a></li>
+            <li> <a href="./about.html"class="w3-bar-item w3-button w3-mobile">About</a></li>
+            <li> <a href="./posts.html"class="w3-bar-item w3-button w3-mobile">Posts</a></li>
+            <li> <a href="./contactForm.html"class="w3-bar-item w3-button w3-mobile">Contact</a></li>
+        
+
         </ul>
     </nav>
     <h1>Welcome to Sumac Application</h1>
