new feature-develope the js of the contact form

--- a/lab_2/main.html
+++ b/lab_2/main.html
@@ -13,32 +13,33 @@
     <nav>
         <ul class="w3-bar w3-black">
             <li> <a href="main.html" class="w3-bar-item w3-button w3-mobile">Home</a></li>
-            <li> <a href="./about.html"class="w3-bar-item w3-button w3-mobile">About</a></li>
-            <li> <a href="./posts.html"class="w3-bar-item w3-button w3-mobile">Posts</a></li>
-            <li> <a href="./contactForm.html"class="w3-bar-item w3-button w3-mobile">Contact</a></li>
-        
+            <li> <a href="./about.html" class="w3-bar-item w3-button w3-mobile">About</a></li>
+            <li> <a href="./posts.html" class="w3-bar-item w3-button w3-mobile">Posts</a></li>
+            <li> <a href="./contactForm.html" class="w3-bar-item w3-button w3-mobile">Contact</a></li>
+
 
         </ul>
     </nav>
-    <h1>Welcome to Sumac Application</h1>
 
-    <p>Sumac is a web application that allows users to share their favorite food recipes with the world. It is a
-        platform where users can explore new flavors, try out exciting dishes, and connect over shared culinary
-        passions. Sumac is a place where users can share their cooking experiences, tips, and personal twists on
-        traditional recipes. The platform encourages creativity, collaboration, and a love for food, making it a vibrant
-        community for food lovers.
 
-        Sumac celebrates diversity by showcasing recipes from all over the world, highlighting different cooking styles
-        and cultural influences. It’s a space where users can express themselves through their cooking, share their
-        culinary stories, and inspire others with their unique approaches to food. Whether it’s a family recipe passed
-        down through generations or a new creation, Sumac empowers users to share their love for food, connect with
-        fellow enthusiasts, and inspire others to experiment in the kitchen.
+    <h1>Welcome to the Sumac Dynamic Webpages Application</h1>
 
-        Sumac is more than just a recipe-sharing platform – it's a community where food lovers can learn, discover new
-        dishes, and make a difference by spreading the joy of cooking. It's where your voice in the kitchen can inspire
-        others to try something new, explore new cuisines, and change the way we think about food.
-
-    </p>
+    <div class="container">
+        <h1></h1>
+        <p>This application provides an interactive way to 
+        explore posts, user profiles, and comments dynamically.</p>
+        <h2>Purpose</h2>
+        <p>The goal of this application is to showcase dynamic content fetching and display using modern web
+            technologies.</p>
+        <h2>Features</h2>
+        <ul>
+            <li>View dynamically loaded posts with user information.</li>
+            <li>Read and interact with user comments.</li>
+            <li>Responsive navigation for easy access.</li>
+            <li>Interactive user profiles.</li>
+            <li>Contact form validation.</li>
+        </ul>
+      
 
 </body>
 <footer>
