--- a/lab_2/main.html
+++ b/lab_2/main.html
@@ -1,51 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sumac</title>
     <link rel="stylesheet" href="./assets/styles.css">
-
 </head>
-
 <body>
     <nav>
         <ul class="w3-bar w3-black">
-            <li> <a href="main.html" class="w3-bar-item w3-button w3-mobile">Home</a></li>
-            <li> <a href="./about.html" class="w3-bar-item w3-button w3-mobile">About</a></li>
-            <li> <a href="./posts.html" class="w3-bar-item w3-button w3-mobile">Posts</a></li>
-            <li> <a href="./contactForm.html" class="w3-bar-item w3-button w3-mobile">Contact</a></li>
-
-
+            <li><a href="main.html" class="w3-bar-item w3-button w3-mobile">Home</a></li>
+            <li><a href="./posts.html" class="w3-bar-item w3-button w3-mobile">Posts</a></li>
+            <li><a href="./profiles.html" class="w3-bar-item w3-button w3-mobile">Profiles</a></li>
+            <li><a href="./about.html" class="w3-bar-item w3-button w3-mobile">About</a></li>
+            <li><a href="./contactForm.html" class="w3-bar-item w3-button w3-mobile">Contact</a></li>
         </ul>
     </nav>
 
+    <main>
+        <h1>Welcome to the Sumac Dynamic Webpages Application</h1>
+        <div class="container">
+            <p>This application provides an interactive way to explore posts, user profiles, and comments dynamically.</p>
+            <h2>Purpose</h2>
+            <p>The goal of this application is to showcase dynamic content fetching and display using modern web technologies.</p>
+            <h2>Features</h2>
+            <ul>
+                <li>View dynamically loaded posts with user information.</li>
+                <li>Read and interact with user comments.</li>
+                <li>Responsive navigation for easy access.</li>
+                <li>Interactive user profiles.</li>
+                <li>Contact form validation.</li>
+            </ul>
+            <h2>How to Use</h2>
+            <p>Click "Posts" to view dynamic posts, "Profiles" to see user profiles, or "Contact" to send us a message.</p>
+        </div>
+    </main>
 
-    <h1>Welcome to the Sumac Dynamic Webpages Application</h1>
-
-    <div class="container">
-        <h1></h1>
-        <p>This application provides an interactive way to 
-        explore posts, user profiles, and comments dynamically.</p>
-        <h2>Purpose</h2>
-        <p>The goal of this application is to showcase dynamic content fetching and display using modern web
-            technologies.</p>
-        <h2>Features</h2>
-        <ul>
-            <li>View dynamically loaded posts with user information.</li>
-            <li>Read and interact with user comments.</li>
-            <li>Responsive navigation for easy access.</li>
-            <li>Interactive user profiles.</li>
-            <li>Contact form validation.</li>
-        </ul>
-      
-
+    <footer>
+        <section class="footer-bottom">
+            <p>© 2022 Sumac.</p>
+        </section>
+    </footer>
 </body>
-<footer>
-    <section class="footer-bottom">
-        <p>&copy; 2022 Sumac.</p>
-    </section>
-</footer>
-
 </html>
