--- a/lab_2/posts.html
+++ b/lab_2/posts.html
@@ -3,188 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab 2 - Posts</title>
+    <title>Sumac - Posts</title>
     <link rel="stylesheet" href="./assets/styles.css">
-    <style>
-        /* Modal styles */
-        .modal {
-            display: none;
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.5);
-            justify-content: center;
-            align-items: center;
-        }
-        .modal-content {
-            background-color: white;
-            padding: 20px;
-            border-radius: 5px;
-            width: 80%;
-            max-width: 400px;
-            position: relative;
-        }
-        .close-btn {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            font-size: 20px;
-            cursor: pointer;
-        }
-    </style>
 </head>
 <body>
-    <nav>
-        <ul class="w3-bar w3-black">
-            <li><a href="main.html" class="w3-bar-item w3-button w3-mobile">Home</a></li>
-            <li><a href="./posts.html" class="w3-bar-item w3-button w3-mobile">Posts</a></li>
-            <li><a href="./profiles.html" class="w3-bar-item w3-button w3-mobile">Profiles</a></li>
-            <li><a href="./about.html" class="w3-bar-item w3-button w3-mobile">About</a></li>
-            <li><a href="./contactForm.html" class="w3-bar-item w3-button w3-mobile">Contact</a></li>
-        </ul>
-    </nav>
-
+    <header>
+        <nav>
+            <ul class="w3-bar w3-black">
+                <li><a href="main.html" class="w3-bar-item w3-button w3-mobile">Home</a></li>
+                <li><a href="posts.html" class="w3-bar-item w3-button w3-mobile active">Posts</a></li>
+                <li><a href="contactForm.html" class="w3-bar-item w3-button w3-mobile">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <section id="posts">
-            <!-- Posts will be dynamically loaded here -->
+            <h1>Posts</h1>
+   
         </section>
     </main>
-
-    <!-- Modal for user profile -->
     <div id="user-modal" class="modal">
         <div class="modal-content">
             <span class="close-btn">&times;</span>
-            <h3>User Profile</h3>
+            <h2>User Profile</h2>
             <div id="user-details"></div>
         </div>
     </div>
-
     <footer>
         <section class="footer-bottom">
-            <p>© 2022 Sumac.</p>
+            <h2>Footer</h2>
+            <p>© 2025 Sumac.</p>
         </section>
     </footer>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", async () => {
-            console.log("Script Loaded!");
-
-            const postsContainer = document.getElementById("posts");
-            const modal = document.getElementById("user-modal");
-            const userDetails = document.getElementById("user-details");
-            const closeBtn = document.querySelector(".close-btn");
-            let skip = 0;
-            const limit = 10;
-            let isLoading = false;
-
-            const fetchData = async (url) => {
-                try {
-                    console.log(`Fetching: ${url}`);
-                    const response = await fetch(url);
-                    if (!response.ok) throw new Error("Failed to fetch data");
-                    return await response.json();
-                } catch (error) {
-                    console.error(error);
-                    return null;
-                }
-            };
-
-            const users = await fetchData("https://dummyjson.com/users");
-            const comments = await fetchData("https://dummyjson.com/comments");
-
-            if (!users || !comments) {
-                postsContainer.innerHTML = "<p>Error loading initial data.</p>";
-                return;
-            }
-
-            const userMap = {};
-            users.users.forEach(user => userMap[user.id] = user);
-
-            const loadPosts = async () => {
-                if (isLoading) return;
-                isLoading = true;
-
-                const posts = await fetchData(`https://dummyjson.com/posts?limit=${limit}&skip=${skip}`);
-                
-                if (!posts || !posts.posts.length) {
-                    postsContainer.innerHTML += "<p>No more posts to load.</p>";
-                    isLoading = false;
-                    return;
-                }
-
-                posts.posts.forEach(post => {
-                    const postElement = document.createElement("div");
-                    postElement.classList.add("post");
-
-                    postElement.innerHTML = `
-                        <h2>${post.title}</h2>
-                        <p>${post.body}</p>
-                        <p><strong>Posted by:</strong> <a href="#" class="user-link" data-user-id="${post.userId}">${userMap[post.userId]?.username || "Unknown"}</a></p>
-                        <p><strong>Tags:</strong> ${post.tags.join(", ")}</p>
-                        <p><strong>Reactions:</strong> Likes - ${post.reactions.likes}, Dislikes - ${post.reactions.dislikes}</p>
-                        <div class="comments">
-                            <h4>Comments:</h4>
-                            <ul id="comments-${post.id}"></ul>
-                        </div>
-                    `;
-
-                    postsContainer.appendChild(postElement);
-
-                    const postComments = comments.comments.filter(c => c.postId === post.id);
-                    const commentList = document.getElementById(`comments-${post.id}`);
-                    postComments.forEach(comment => {
-                        const commentItem = document.createElement("li");
-                        commentItem.textContent = comment.body;
-                        commentList.appendChild(commentItem);
-                    });
-                });
-
-                skip += limit;
-                isLoading = false;
-            };
-
-            await loadPosts();
-
-            window.addEventListener("scroll", async () => {
-                if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 100 && !isLoading) {
-                    await loadPosts();
-                }
-            });
-
-            // User profile click handler with modal
-            document.querySelectorAll('.user-link').forEach(link => {
-                link.addEventListener('click', (event) => {
-                    event.preventDefault();
-                    const userId = event.target.dataset.userId;
-                    const user = userMap[userId];
-                    if (user) {
-                        userDetails.innerHTML = `
-                            <p><strong>Name:</strong> ${user.username}</p>
-                            <p><strong>Email:</strong> ${user.email}</p>
-                            <p><strong>Phone:</strong> ${user.phone}</p>
-                        `;
-                        modal.style.display = "flex"; // Show modal
-                    } else {
-                        userDetails.innerHTML = "<p>User not found.</p>";
-                        modal.style.display = "flex";
-                    }
-                });
-            });
-
-            // Close modal when clicking the close button
-            closeBtn.addEventListener("click", () => {
-                modal.style.display = "none";
-            });
-
-            // Close modal when clicking outside the content
-            modal.addEventListener("click", (event) => {
-                if (event.target === modal) {
-                    modal.style.display = "none";
-                }
-            });
-        });
-    </script>
+    <script src="./posts.js"></script>
 </body>
 </html>
